--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2",
     "xss-clean": "^0.1.4"
+  },
+  "engines": {
+    "node": "20.10.0"
   }
 }
